# claurst

./: README.md
.github/workflows/: npm-publish.yml  release.yml
docs/: index.md  installation.md
npm/: package.json
src-rust/: Cargo.toml
src-rust/crates/acp/registry-template/: agent.json
src-rust/crates/api/src/: lib.rs  registry.rs
src-rust/crates/api/src/providers/: azure.rs  bedrock.rs  codex.rs  cohere.rs  copilot.rs  minimax.rs  openai.rs  openai_compat.rs
src-rust/crates/cli/src/: main.rs
src-rust/crates/core/src/: lib.rs
src-rust/crates/tui/src/: lib.rs
